# castor

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  on-release-main.yml
python/castor_gallery/: __init__.py  __main__.py
